--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.7.4",
-        "updated": "2025-12-31 17:38:53"
+        "version": "1.8.2",
+        "updated": "2026-01-23 22:35:37"
     },
     "txwelcome": "Добро пожаловать",
     "quotes": [
@@ -11,6 +11,13 @@
     "oclocksh": "ч",
     "hoursh": "ч",
     "daysh": "д",
+    "weath_c": "°C",
+    "weath_f": "°F",
+    "weath_kmh": "км/ч",
+    "weath_mph": "mph",
+    "weath_lm2": "мм",
+    "weath_in": "ʺ",
+    "weath_pct": "%",
     "decimalsep": ",",
     "n_a": "н/д",
     "wdaysh": [
@@ -60,6 +67,7 @@
     "txgpsautosh": "АВТО",
     "txtimezone": "Часовой пояс",
     "txtimeformat": "24ч-формат",
+    "txsiformat": "Метрическая (°C, км/ч)",
     "txwelcomescr": "Подсказка GPS выкл.",
     "txshowagni": "Агнихотра (GPS)",
     "txagnihotrain": "Агнихотра через: {agnih_countdo}",
@@ -82,6 +90,14 @@
         "zh": "Китайский",
         "ru": "Русский"
     },
+    "txweathapi": "Погода",
+    "txweathapiarr": {
+        "auto": "автоматически",
+        "-NIL-": "выкл.",
+        "openmeteo": "Open-Met/Icon-D2",
+        "metno": "MET Norge"
+    },
+    "txnow": "Сейчас",
     "txfullscr": "Всегда включено",
     "txnachtmodus": "Тёмный режим",
     "txnachtmodusarr": {
@@ -124,11 +140,11 @@
     "txnosupport": "[i]ПРИМЕЧАНИЕ: Ваш язык пока не поддерживается, поэтому отображается английский. На последней странице есть кнопка «Автоперевод»[/i]",
     "uebanleitung": "Инструкция",
     "txanleitung": "[DF]{LANGSUPPORT}1. Установите флажок {txgpsauto}, чтобы Ваше местоположение автоматически обновлялось во время использования ({quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} для более точного определения места и синхронизации времени по GPS). {txgpsbutton} определяет Вашу текущую позицию один раз и сохраняет её.[~LF][~LF]Либо Вы можете ввести название места или адрес в текстовое поле (если устройство это поддерживает) или координаты (например, 50.94, 6.96). 3-й и 4-й параметр необязательны: примерная высота [m], примерная температура в сумерках [°C]. Затем установите флажок {txwelcomescr}. - При изменении базовых данных {txsunclock-} выполняет суточный расчёт, который в зависимости от устройства может занять от 2[NDASH]30 секунд.[~LF][~LF]2. {txuhrsinn} задаёт, идут ли часы по часовой стрелке (Юг) или против: однако при смене направления вращения часть солнечного круга под горизонтом окажется перед Вами (подробности см. на следующей странице). {txshowclock} показывает цифровые часы в правом верхнем углу циферблата.",
-    "txmore": "[DF]3. {txfarben} выбирает разные циферблаты. {txnachtmodus} {txlangarr|auto-} переключает при закате, -6° до конца сумерек, +6° до этого. [~LF][~LF]4. {txagnihotra} показывает метки для солнечной стрелки, а также время следующего нулевого прохождения Солнца и обратный отсчёт. За шесть минут до Агнихотры отображение увеличивается и показываются секунды (⁺ означает, что GPS актуален). {txfullscr} не даёт экрану выключаться и переключает в полноэкранный режим. - Если настройки однажды не применились, нажмите кнопку обновления внизу справа на циферблате.[~LF][~LF]Вы можете приблизить циферблат двумя пальцами (или тройным тапом). Если хотите перемещать увеличенное изображение, делайте это медленно. Быстрые движения перелистывают на следующую страницу. - На следующей странице вы найдёте объяснение циферблата.[DF][DF][DF][b]–– Легенда циферблата:[/b]",
+    "txmore": "[DF]3. {txfarben} выбирает различные циферблаты. {txnachtmodus} {txlangarr|auto-} переключается при закате, -6° до конца сумерек, +6° до этого. [~LF][~LF]4. {txagnihotra} показывает метки для солнечной стрелки, а также время следующего нулевого прохождения солнца и обратный отсчёт. За шесть минут до Агнихотры отображение увеличивается и показываются секунды (⁺ означает актуальный GPS). {txfullscr} предотвращает отключение экрана и включает полноэкранный режим. {txweathapi} накладывает дневной прогноз на часы (если есть сеть). Если он становится серым, данные устарели. - Если настройки иногда не применяются, нажмите кнопку обновления внизу справа на циферблате.[~LF][~LF]Вы можете увеличить циферблат двумя пальцами (или тройным касанием). Если хотите переместить увеличенное изображение, делайте это медленно. Быстрые движения пролистывают на следующую страницу. - На следующей странице вы найдёте объяснение циферблата.[DF][DF][DF][b]–– Легенда циферблата:[/b][DF][DF]Погода: текущая температура, выше дневная погода: осадки/день, солнце/день, возможные символы (кактус = сухо), возможный день недели (= погода на завтра)",
     "txdata": "[DF]Данные",
-    "txlocdata": "[DF]Расчёты «Солнечных часов Гордона» для вашего местоположения должны совпадать с астрономическим альманахом с точностью до 0,0005 угловых секунд³:[DF]",
-    "txobjdata": "– Солнце¹ –[~LF]Время: {sun_clocktm}[~LF]Темпоральный час: {sun_temptm}[~LF]Световой день: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Солнцестояние: {sun_soli}[~LF]Равноденствие: {sun_equi}[~LF][~LF]– Луна² –[~LF]Новолуние: {moon_new}[~LF]Полнолуние: {moon_full}[~LF]Лунная ночь: {moon_gordon}[~LF]Освещённость: {moon_illum}[~LF]Размер: {moon_sizep} (85-100)[~LF][~LF]– Яркость –[~LF]Венера: {venus_magp} (83-100)[~LF]Марс: {mars_magp} (52-100)[~LF]Юпитер: {jupiter_magp} (87-100)[~LF]Сатурн: {saturn_magp} (77-100)[~LF]Меркурий: {merkur_magp} (0-100)[~LF][~LF]¹ Время: GPS = синхронизировано | Темпоральный час: местный неравный час (0,0[NDASH]11,9), ‘ἡ’ для дня и ‘ν’ для ночи. ‘φ’ ночная стража с неравными «минутами» (0φ00[NDASH]3φ59) | {lighttime-}: см. ниже | Световой день и Агнихотра: восход[NDASH]закат сегодня [восход завтра], ⁺ = текущий GPS | ² Полная и новая Луна: момент (через/до скольких дней) | Лунная ночь: см. ниже | ³ Диаметр Луны ≈ 2000 угловых секунд[DF][DF]",
-    "txlegende0": "[b]–– Пояснения:[/b][~LF][~LF]Световой сезон года делит год на восемь фаз нарастающего и убывающего света: 1. {solcal_lph|0-} (4.2–5.5), 2a. {solcal_lph|1-} (6.5–20.5), 2b. {solcal_lph|2-} (21.5–21.7), 2c. {solcal_lph|3-} (22.7–6.8), 3. {solcal_lph|4-} (7.8–6.11), 4a. {solcal_lph|5-} (7.11–21.11), 4b. {solcal_lph|6-} (22.11–19.1) и 4c. {solcal_lph|7-} (20.1–3.2). Кратко: Φx·y, где x = световое время, y =[SP]% прогресса. – Даты опираются на астрономические точки и могут немного отличаться от гражданского календаря.[~LF][~LF]Лунная дата работает как наша календарная дата, но с ночами вместо дней: Μx·y (p/z), где x = «лунный месяц» года, y = ночь в этом лунном месяце. Так как длительность лунных месяцев различна, z даёт общее число ночей в лунном месяце, а p – ночь полнолуния. Ночь заканчивается на восходе солнца.[DF][DF][DF]",
+    "txlocdata": "[DF]Расчёты для вашего индивидуального местоположения должны совпадать с астрономическим альманахом с точностью до 0,0005 угловых секунд³:[DF]",
+    "txobjdata": "– Солнце¹ –[~LF]Время часов: {sun_clocktm}[~LF]Темпоральный час: {sun_temptm}[~LF]Световой день: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Солнцестояние: {sun_soli}[~LF]Равноденствие: {sun_equi}[~LF][~LF]– Луна² –[~LF]Новолуние: {moon_new}[~LF]Полнолуние: {moon_full}[~LF]Лунная ночь: {moon_gordon}[~LF]Освещённость: {moon_illum}[~LF]Размер: {moon_sizep} (85-100){weather_data}[~LF][~LF]– Яркость –[~LF]Венера: {venus_magp} (83-100)[~LF]Марс: {mars_magp} (52-100)[~LF]Юпитер: {jupiter_magp} (87-100)[~LF]Сатурн: {saturn_magp} (77-100)[~LF]Меркурий: {merkur_magp} (0-100)[~LF][~LF]¹ Время часов: GPS = синхронизировано | Темпоральный час: местный, неравный час (0,0[NDASH]11,9) «ἡ» дня или «ν» ночи. «φ» ночная стража с неравными «минутами» (0φ00[NDASH]3φ59) | {lighttime-}: см. ниже | Световой день и Агнихотра: восход[NDASH]закат сегодня [восход завтра], ⁺ = актуальный GPS | ² Полнолуние и новолуние: момент (в/до днях) | Лунная ночь: см. ниже | ³ Луна имеет размер около 2000 угловых секунд | ⁴ Погода: мин...макс...[ночной мин][DF][DF]",
+    "txlegende0": "[b]–– Пояснения:[/b][~LF][~LF]Световой год делит год на восемь фаз увеличения и уменьшения света (% прогресса фазы): 1. {solcal_lph|0-} (4.2.–5.5.), 2a. {solcal_lph|1-} (6.5.–20.5.), 2b. {solcal_lph|2-} (21.5.–21.7.), 2c. {solcal_lph|3-} (22.7.–6.8.), 3. {solcal_lph|4-} (7.8.–6.11.), 4a. {solcal_lph|5-} (7.11.–21.11.), 4b. {solcal_lph|6-} (22.11.–19.1.) и 4c. {solcal_lph|7-} (20.1.–3.2.). Краткая форма: Φx·y. Даты ориентированы на астрономические точки и могут немного отличаться от календаря.[~LF][~LF]Лунная дата работает как наша дата, но с ночами вместо дней: Μx·y (p/z), где x = лунный «месяц» года, y = ночь лунного месяца. Поскольку лунные месяцы имеют разную длину, z указывает общее количество ночей лунного месяца, p — ночь полнолуния. Ночь заканчивается на восходе солнца.[DF][DF][DF]",
     "buttonsolcal": "Световой календарь",
     "txlegende": "[DF]☉ Солнце, ● Луна (с фазами)[~LF][~LF]♀ Венера (перламутровая), ♂ Марс (красноватый), ♃ Юпитер (полосатый), ♄ Сатурн (с кольцами), ☿ Меркурий (серый)[~LF][~LF][s] Сириус, [k] Канопус, [f] Альфа Центавра, [a] Арктур, [w] Вега, [c] Капелла, [r] Ригель, [p] Процион, [b] Бетельгейзе, [h] Ахернар[DF][DF][DF][DF]",
     "char_vowels": "аеёиоуыэюяАЕЁИОУЫЭЮЯ",
@@ -196,7 +212,7 @@
     "txanleitungprg": "[DF]Солнечные часы Гордона[~LF]Версия [VERSIONNUM][~LF]Гордон Аксман[~LF]Copyright 2019-[VERSIONYEAR]",
     "txanleitung3": "[DF]Пожалуйста, используйте программу как есть. Это бесплатное частное предложение. Я не профессиональный разработчик приложений, но за годы в программу вложено много души.[DF][DF]",
     "txchangelog": "Что нового?",
-    "txanleitung4": "[DF]Данные ни собираются, ни отправляются. Всё остаётся на вашем устройстве. Для работы не требуется даже подключение к интернету. Исключение: при ошибке программы, если у вас есть интернет, отправляется анонимное сообщение об ошибке (подробности см. в политике конфиденциальности). Так вы помогаете, чтобы «Солнечные часы» работали без сбоев.[~LF][~LF]Если вы нашли ошибку, я с радостью её исправлю. Для этого нужен чёткий отчёт об ошибке (возможно, со скриншотом) и краткое описание, где и когда она произошла. Полезен также скриншот журнала статуса внизу сразу после возникновения ошибки (контакт по почте: [CONTACTSUPPORT]). Сообщения о якобы ошибках в расчётах в 99 % случаев ложные — к сожалению, в интернете много неверной информации о звёздных расчётах.[~LF][~LF]Благодарность: Брэндон Роудс (Skyfield), Рольф, Грег Миллер и все тестеры. Изображения небесных тел предоставлены: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Hubble Space Telescope и NASA / JPL-Caltech (общественное достояние). Полный список всех используемых материалов третьих сторон и лицензий находится в файле \"design/COPYRIGHT.txt\".[~LF][~LF]Я предоставляю вам «Солнечные часы» бесплатно. Просто наслаждайтесь ими. Если вы хотите выразить признательность за мою работу, вот моя веб-страница:[DF][DF]",
+    "txanleitung4": "[DF]Данные не собираются и не передаются. Всё остаётся на вашем устройстве. Для работы не требуется даже подключение к Интернету. Одно исключение: в случае ошибки программы, при наличии Интернета, отправляется анонимный отчёт об ошибке (подробнее см. политику конфиденциальности). Это помогает обеспечить корректную работу {txsunclock-}.[~LF][~LF]Если вы обнаружили ошибку, я с радостью её исправлю. Для этого мне нужен чёткий отчёт об ошибке (при необходимости со снимком экрана) и краткое описание того, где и когда возникла ошибка. Также полезен снимок экрана журнала состояния, приведённого ниже, сделанный по возможности сразу после возникновения ошибки (контакт по почте: [CONTACTSUPPORT]). - Сообщения о предполагаемых ошибках расчётов в 99 % случаев являются ложными; к сожалению, существует много дезинформации о астрономических расчётах.[~LF][~LF]Благодарности: Brandon Rhodes (Skyfield), Rolf, Greg Miller и всем тестерам. Изображения небесных тел предоставлены: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Космический телескоп Хаббл и NASA / JPL-Caltech (общественное достояние). Метеоданные (опционально): Open-Meteo.com (CC BY 4.0), MET Norway / Meteorologisk institutt (CC BY 4.0). Перечень всех использованных материалов и лицензий третьих сторон можно найти в файле \"design/ COPYRIGHT.txt\".[~LF][~LF]Я предоставляю вам {txsunclock} бесплатно. Просто пользуйтесь ею с удовольствием. Если вы хотите выразить признательность за мою работу, здесь вы найдёте моё веб-присутствие:[DF][DF]",
     "txkaffee": "На веб-страницу",
     "solcalmonthsxx": [
         "% Новофев",
