--- a/lang/es.json
+++ b/lang/es.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.7.4",
-        "updated": "2025-12-31 17:38:53"
+        "version": "1.8.2",
+        "updated": "2026-01-23 22:35:37"
     },
     "txwelcome": "Bienvenido",
     "quotes": [
@@ -11,6 +11,13 @@
     "oclocksh": "h",
     "hoursh": "h",
     "daysh": "d",
+    "weath_c": "°C",
+    "weath_f": "°F",
+    "weath_kmh": "km/h",
+    "weath_mph": "mph",
+    "weath_lm2": "l/m²",
+    "weath_in": "ʺ",
+    "weath_pct": "%",
     "decimalsep": ",",
     "n_a": "N/D",
     "wdaysh": [
@@ -58,6 +65,7 @@
     "txgpsautosh": "AUTO",
     "txtimezone": "Zona horaria",
     "txtimeformat": "Formato 24h",
+    "txsiformat": "Métrico (°C, km/h)",
     "txshowclock": "Mostrar la hora",
     "txwelcomescr": "Nota GPS desactivado",
     "txshowagni": "Agnihotra (GPS)",
@@ -81,6 +89,14 @@
         "it": "Italiano",
         "zh": "Chino"
     },
+    "txweathapi": "Tiempo",
+    "txweathapiarr": {
+        "auto": "automático",
+        "-NIL-": "desactivado",
+        "openmeteo": "Open-Met/Icon-D2",
+        "metno": "MET Norge"
+    },
+    "txnow": "Ahora",
     "txfullscr": "Siempre encendida",
     "txnachtmodus": "Modo oscuro",
     "txnachtmodusarr": {
@@ -122,11 +138,11 @@
     "txnosupport": "[i]NOTA: Su idioma aún no ha sido traducido. En la última página encontrará un botón «Traducción automática»[/i]",
     "uebanleitung": "Instrucciones",
     "txanleitung": "[DF]{LANGSUPPORT}1. Marque la casilla {txgpsauto} para actualizar su ubicación automáticamente durante el uso ({quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} para una determinación más precisa de la ubicación y la sincronización de hora por GPS). {txgpsbutton} determina su posición actual una vez y la guarda de forma permanente.[~LF][~LF]Como alternativa, puede introducir un nombre de lugar o una dirección en el campo de texto (si su dispositivo lo admite) o coordenadas (p. ej. 50.94, 6.96). Un 3.º y 4.º dato son opcionales: la altura aproximada [m], la temperatura aproximada al crepúsculo [°C]. A continuación marque la casilla {txwelcomescr}. - Al cambiar datos básicos, {txsunclock-} realiza un cálculo diario que, según el dispositivo, puede tardar entre 2[NDASH]30 segundos.[~LF][~LF]2. {txuhrsinn} define si el reloj gira en el sentido de las agujas del reloj (sur) o en sentido contrario; sin embargo, si cambia el sentido de giro, la parte del círculo solar situada bajo el horizonte quedará delante de usted (detalles en la página siguiente). {txshowclock} muestra un reloj digital en la parte superior derecha de la esfera.",
-    "txmore": "[DF]3. {txfarben} selecciona diferentes esferas. {txnachtmodus} {txlangarr|auto-} cambia al atardecer, -6° hasta el final del crepúsculo, +6° antes. [~LF][~LF]4. {txagnihotra} muestra marcas para el indicador solar, así como la hora del próximo cruce por cero del Sol y la cuenta atrás. Seis minutos antes de Agnihotra se amplía la visualización y se muestran los segundos (⁺ significa que el GPS está actualizado). {txfullscr} evita que la pantalla se apague y cambia a pantalla completa. - Si alguna vez no se aplican los ajustes, toca el botón de actualización abajo a la derecha de la esfera.[~LF][~LF]Puedes ampliar la esfera con dos dedos (o con triple toque). Si quieres mover la imagen ampliada, hazlo despacio. Los movimientos rápidos pasan a la página siguiente. - En la página siguiente encontrarás una explicación de la esfera.[DF][DF][DF][b]–– Leyenda de la esfera:[/b]",
+    "txmore": "[DF]3. {txfarben} selecciona diferentes diales. {txnachtmodus} {txlangarr|auto-} cambia al atardecer, -6° hasta el final del crepúsculo, +6° antes. [~LF][~LF]4. {txagnihotra} muestra marcas para la aguja solar así como la hora del próximo cruce por cero del sol y la cuenta atrás. Seis minutos antes de Agnihotra, la visualización se amplía y se muestran los segundos (⁺ significa GPS actual). {txfullscr} evita que la pantalla se apague y activa el modo de pantalla completa. {txweathapi} superpone una previsión diaria en el reloj (si hay red). Si se vuelve gris, los datos son antiguos. - Si alguna vez no se aplican sus ajustes, toque el botón de actualización en la parte inferior derecha del dial.[~LF][~LF]Puede hacer zoom en el dial con dos dedos (o con triple toque). Si desea mover la imagen ampliada, hágalo lentamente. Los movimientos rápidos deslizan a la página siguiente. - En la página siguiente encontrará una explicación del dial.[DF][DF][DF][b]–– Leyenda del dial:[/b][DF][DF]Tiempo: temperatura actual, encima tiempo diario: precipitación/día, sol/día, símbolos opcionales (cactus = seco), día de la semana opcional (= tiempo de mañana)",
     "txdata": "[DF]Datos",
-    "txlocdata": "[DF]Los cálculos del Reloj de sol de Gordon para su ubicación específica deben coincidir con el almanaque astronómico con una precisión de 0,0005 segundos de arco³:[DF]",
-    "txobjdata": "– Sol¹ –[~LF]Hora: {sun_clocktm}[~LF]Hora temporal: {sun_temptm}[~LF]Día de luz: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Solsticio: {sun_soli}[~LF]Equinoccio: {sun_equi}[~LF][~LF]– Luna² –[~LF]Luna nueva: {moon_new}[~LF]Luna llena: {moon_full}[~LF]Noche lunar: {moon_gordon}[~LF]Iluminada: {moon_illum}[~LF]Tamaño: {moon_sizep} (85-100)[~LF][~LF]– Brillo –[~LF]Venus: {venus_magp} (83-100)[~LF]Marte: {mars_magp} (52-100)[~LF]Júpiter: {jupiter_magp} (87-100)[~LF]Saturno: {saturn_magp} (77-100)[~LF]Mercurio: {merkur_magp} (0-100)[~LF][~LF]¹ Hora: GPS = sincronizada | Hora temporal: hora local desigual (0,0[NDASH]11,9) ‘ἡ’ del día o ‘ν’ de la noche. ‘φ’ vigilia nocturna con “minutos” desiguales (0φ00[NDASH]3φ59) | {lighttime-}: véase más abajo | Día de luz y Agnihotra: salida[NDASH]puesta de hoy [salida de mañana], ⁺ = GPS actual | ² Luna llena y nueva: momento (en/antes de días) | Noche lunar: véase más abajo | ³ La Luna mide aprox. 2000 segundos de arco[DF][DF]",
-    "txlegende0": "[b]–– Explicaciones:[/b][~LF][~LF]La estación de luz del año divide el año en ocho fases de aumento y disminución de la luz: 1. {solcal_lph|0-} (4.2–5.5), 2a. {solcal_lph|1-} (6.5–20.5), 2b. {solcal_lph|2-} (21.5–21.7), 2c. {solcal_lph|3-} (22.7–6.8), 3. {solcal_lph|4-} (7.8–6.11), 4a. {solcal_lph|5-} (7.11–21.11), 4b. {solcal_lph|6-} (22.11–19.1) y 4c. {solcal_lph|7-} (20.1–3.2). En breve: Φx·y con x = temporada de luz, y =[SP]% de progreso. – Las fechas se basan en puntos astronómicos y pueden desviarse ligeramente del calendario civil.[~LF][~LF]La fecha lunar funciona como nuestra fecha, pero con noches en lugar de días: Μx·y (p/z), donde x = “mes” lunar del año, y = noche del mes lunar. Como los meses lunares tienen distinta longitud, z indica el número total de noches del mes lunar y p la noche de luna llena. La noche termina al amanecer.[DF][DF][DF]",
+    "txlocdata": "[DF]Los cálculos para su ubicación individual deberían coincidir con el almanaque astronómico hasta 0,0005 segundos de arco³:[DF]",
+    "txobjdata": "– Sol¹ –[~LF]Hora del reloj: {sun_clocktm}[~LF]Hora temporal: {sun_temptm}[~LF]Día de luz: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Solsticio: {sun_soli}[~LF]Equinoccio: {sun_equi}[~LF][~LF]– Luna² –[~LF]Luna nueva: {moon_new}[~LF]Luna llena: {moon_full}[~LF]Noche lunar: {moon_gordon}[~LF]Iluminada: {moon_illum}[~LF]Tamaño: {moon_sizep} (85-100){weather_data}[~LF][~LF]– Brillo –[~LF]Venus: {venus_magp} (83-100)[~LF]Marte: {mars_magp} (52-100)[~LF]Júpiter: {jupiter_magp} (87-100)[~LF]Saturno: {saturn_magp} (77-100)[~LF]Mercurio: {merkur_magp} (0-100)[~LF][~LF]¹ Hora del reloj: GPS = sincronizado | Hora temporal: hora local desigual (0,0[NDASH]11,9) “ἡ” del día o “ν” de la noche. “φ” vigilia nocturna con “minutos” desiguales (0φ00[NDASH]3φ59) | {lighttime-}: ver abajo | Día de luz y Agnihotra: salida[NDASH]puesta hoy [salida mañana], ⁺ = GPS actual | ² Luna llena y nueva: momento (en/antes de días) | Noche lunar: ver abajo | ³ La luna mide aprox. 2000 segundos de arco | ⁴ Tiempo: mín...máx...[mín noche][DF][DF]",
+    "txlegende0": "[b]–– Explicaciones:[/b][~LF][~LF]La estación del año de la luz divide el año en ocho fases de aumento y disminución de la luz (% de progreso de la fase): 1. {solcal_lph|0-} (4.2.–5.5.), 2a. {solcal_lph|1-} (6.5.–20.5.), 2b. {solcal_lph|2-} (21.5.–21.7.), 2c. {solcal_lph|3-} (22.7.–6.8.), 3. {solcal_lph|4-} (7.8.–6.11.), 4a. {solcal_lph|5-} (7.11.–21.11.), 4b. {solcal_lph|6-} (22.11.–19.1.) y 4c. {solcal_lph|7-} (20.1.–3.2.). Forma corta: Φx·y. Las fechas se basan en puntos astronómicos y pueden diferir ligeramente del calendario.[~LF][~LF]La fecha lunar funciona como nuestra fecha, pero con noches en lugar de días: Μx·y (p/z) con x = “mes” lunar del año, y = noche del mes lunar. Como los meses lunares tienen distinta duración, z indica las noches totales del mes lunar, p la noche de luna llena. La noche termina al amanecer.[DF][DF][DF]",
     "buttonsolcal": "Calendario de luz",
     "txlegende": "[DF]☉ Sol, ● Luna (con fases)[~LF][~LF]♀ Venus (nacarada), ♂ Marte (rojizo), ♃ Júpiter (listado), ♄ Saturno (con anillos), ☿ Mercurio (gris)[~LF][~LF][s] Sirio, [k] Canopo, [f] Alfa Centauri, [a] Arturo, [w] Vega, [c] Capella, [r] Rigel, [p] Proción, [b] Betelgeuse, [h] Achernar[DF][DF][DF][DF]",
     "char_vowels": "aeiouyäöüáéíóúÄÖÜÁÉÍÓÚ",
@@ -199,7 +215,7 @@
     "txanleitungprg": "[DF]Reloj de sol de Gordon[~LF]Versión [VERSIONNUM][~LF]Gordon Axmann[~LF]Copyright 2019-[VERSIONYEAR]",
     "txanleitung3": "[DF]Utilice el software tal y como está. Se trata de una oferta privada y gratuita. No soy un desarrollador de aplicaciones profesional, pero he dedicado mucho esfuerzo y dedicación al programa durante años.[DF][DF]",
     "txchangelog": "¿Qué hay de nuevo?",
-    "txanleitung4": "[DF] No se recopilan ni envían datos. Todo permanece en su dispositivo. Ni siquiera se necesita una conexión a Internet para su funcionamiento. Una excepción: si se produce un error en el programa, se enviará un mensaje de error anónimo (para más detalles, consulte la política de privacidad) si dispone de conexión a Internet. De este modo, contribuirá al buen funcionamiento de Reloj de sol.[~LF][~LF]Si encuentra un error, estaré encantado de corregirlo. Para ello, necesito un informe claro del error (posiblemente con una captura de pantalla) y una breve descripción de dónde y cuándo se produjo el error. También es útil una captura de pantalla del registro de estado que aparece a continuación, a ser posible inmediatamente después de que se produzca el error (contacto por correo electrónico: [CONTACTSUPPORT]). Las indicaciones sobre supuestos errores de cálculo son, en el 99 % de los casos, informes falsos; lamentablemente, hay mucha información errónea sobre el cálculo de las estrellas.[~LF][~LF]Agradecimientos a: Brandon Rhodes (Skyfield), Rolf, Greg Miller y todos los probadores. Imágenes de los cuerpos celestes proporcionadas por: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Telescopio espacial Hubble y NASA / JPL-Caltech (dominio público). Encontrará una lista de todos los materiales de terceros utilizados y las licencias en el archivo «design/ COPYRIGHT.txt».[~LF][~LF]Le ofrezco «Reloj de sol» de forma gratuita. Simplemente disfrútelo. Si desea expresar su agradecimiento por mi trabajo, aquí encontrará mi página web:[DF][DF]",
+    "txanleitung4": "[DF]No se recopilan ni se envían datos. Todo permanece en su dispositivo. Para el funcionamiento ni siquiera se requiere una conexión a Internet. Una excepción: en caso de un error del programa, si dispone de Internet, se envía un informe de error anónimo (véanse los detalles en la política de privacidad). Con ello ayuda a que {txsunclock-} funcione correctamente.[~LF][~LF]Si ha encontrado un error, con gusto lo corregiré. Para ello necesito un informe de error claro (opcionalmente con captura de pantalla) y una breve descripción de dónde y cuándo ocurrió el error. También es útil una captura de pantalla del registro de estado que se muestra a continuación, tomada lo antes posible después de que ocurra el error (contacto por correo: [CONTACTSUPPORT]). - Las indicaciones sobre supuestos errores de cálculo son falsas en el 99% de los casos; lamentablemente existe mucha desinformación sobre cálculos astronómicos.[~LF][~LF]Gracias a: Brandon Rhodes (Skyfield), Rolf, Greg Miller y todos los testers. Imágenes de cuerpos celestes proporcionadas por: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Telescopio Espacial Hubble y NASA / JPL-Caltech (dominio público). Datos meteorológicos (opcional): Open-Meteo.com (CC BY 4.0), MET Norway / Meteorologisk institutt (CC BY 4.0). Una lista de todos los materiales y licencias de terceros utilizados se encuentra en el archivo \"design/ COPYRIGHT.txt\".[~LF][~LF]Pongo a su disposición {txsunclock} de forma gratuita. Simplemente disfrútelo. Si desea expresar su aprecio por mi trabajo, encontrará aquí mi presencia web:[DF][DF]",
     "txkaffee": "Ir a la página web",
     "solcalmonthsxx": [
         "% nuevo febr",
