--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.7.4",
-        "updated": "2025-12-31 17:38:53"
+        "version": "1.8.2",
+        "updated": "2026-01-23 22:35:37"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -11,6 +11,13 @@
     "oclocksh": "",
     "hoursh": "小时",
     "daysh": "天",
+    "weath_c": "℃",
+    "weath_f": "℉",
+    "weath_kmh": "km/h",
+    "weath_mph": "mph",
+    "weath_lm2": "毫米",
+    "weath_in": "ʺ",
+    "weath_pct": "%",
     "decimalsep": ".",
     "n_a": "无数据",
     "wdaysh": [
@@ -71,6 +78,7 @@
     "txgpsautosh": "自动",
     "txtimezone": "时区",
     "txtimeformat": "24小时制",
+    "txsiformat": "公制（°C，km/h）",
     "txshowclock": "显示时间",
     "txwelcomescr": "关闭GPS提示",
     "txshowagni": "阿格尼霍特拉（GPS）",
@@ -94,6 +102,14 @@
         "it": "Italiano",
         "zh": "中文"
     },
+    "txweathapi": "天气",
+    "txweathapiarr": {
+        "auto": "自动",
+        "-NIL-": "关闭",
+        "openmeteo": "Open-Met/Icon-D2",
+        "metno": "MET Norge"
+    },
+    "txnow": "现在",
     "txfullscr": "始终开启模式",
     "txnachtmodus": "黑暗模式",
     "txnachtmodusarr": {
@@ -135,11 +151,11 @@
     "txnosupport": "[i]注意：您的语言尚未翻译。在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "uebanleitung": "说明",
     "txanleitung": "[DF]{LANGSUPPORT}1. 勾选 {txgpsauto}，以便在使用过程中自动更新您的位置（{quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} 用于更精确的定位与 GPS 时间同步）。{txgpsbutton} 会一次性确定您当前的位置并将其保存。[~LF][~LF]或者，您也可以在文本框中输入地名或地址（若您的设备支持），或输入坐标（例如 50.94, 6.96）。第 3 与第 4 项为可选：大致海拔 [m]、黄昏时的大致温度 [°C]。随后勾选 {txwelcomescr}。- 当基本数据发生变化时，{txsunclock-} 会执行一次日计算，耗时视设备而定，可能在 2[NDASH]30 秒之间。[~LF][~LF]2. {txuhrsinn} 用于设置时钟是顺时针（南）还是逆时针运行：不过如果您更改旋转方向，太阳圆圈中位于地平线下方的部分将会在您面前（详情见下一页）。{txshowclock} 会在表盘右上角显示一个数字时钟。",
-    "txmore": "[DF]3. {txfarben} 选择不同的表盘。{txnachtmodus} {txlangarr|auto-} 在日落时切换：-6° 到暮光结束，+6° 之前。 [~LF][~LF]4. {txagnihotra} 显示太阳指针的标记，以及下一次太阳过零时刻和倒计时。Agnihotra 开始前 6 分钟会放大显示并显示秒（⁺ 表示 GPS 为最新）。{txfullscr} 防止屏幕熄灭并切换到全屏。 - 如果某次设置未生效，请点击表盘右下角的刷新按钮。[~LF][~LF]你可以用两指缩放表盘（或三击）。如需拖动放大的画面，请慢慢移动；快速滑动会切到下一页。 - 下一页有表盘说明。[DF][DF][DF][b]–– 表盘图例：[/b]",
+    "txmore": "[DF]3. {txfarben} 选择不同的表盘。{txnachtmodus} {txlangarr|auto-} 在日落时切换，-6° 至暮光结束，+6° 之前。 [~LF][~LF]4. {txagnihotra} 显示太阳指针的标记，以及下一次太阳零点通过的时间和倒计时。Agnihotra 前六分钟，显示放大并显示秒数（⁺ 表示 GPS 为当前）。{txfullscr} 防止屏幕关闭并切换到全屏。{txweathapi} 在时钟上叠加每日天气预报（如有网络）。若变为灰色，则数据已过期。- 若设置有时未被应用，请点击表盘右下角的刷新按钮。[~LF][~LF]您可以用两指放大表盘（或三击）。如需移动放大的图像，请缓慢操作。快速移动会切换到下一页。- 在下一页可找到表盘说明。[DF][DF][DF][b]–– 表盘图例:[/b][DF][DF]天气：当前温度，其上为每日天气：降水/天，日照/天，可选符号（仙人掌 = 干燥），可选星期（= 明天天气）",
     "txdata": "[DF]数据",
-    "txlocdata": "[DF]根据Gordon-太阳时钟对您所在位置的计算结果应与天文年历上的数据一致，误差不超过 0.0005 角秒³：[DF]",
-    "txobjdata": "– 太阳¹ –[~LF]时间: {sun_clocktm}[~LF]时段: {sun_temptm}[~LF]光日: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]至日: {sun_soli}[~LF]昼夜平分点: {sun_equi}[~LF][~LF]– 月亮² –[~LF]新月: {moon_new}[~LF]满月: {moon_full}[~LF]月夜: {moon_gordon}[~LF]被照亮: {moon_illum}[~LF]视直径: {moon_sizep} (85-100)[~LF][~LF]– 亮度 –[~LF]金星: {venus_magp} (83-100)[~LF]火星: {mars_magp} (52-100)[~LF]木星: {jupiter_magp} (87-100)[~LF]土星: {saturn_magp} (77-100)[~LF]水星: {merkur_magp} (0-100)[~LF][~LF]¹ 时间: GPS = 已同步 | 时段: 本地不等时 (0.0[NDASH]11.9)，白昼用 ‘ἡ’，黑夜用 ‘ν’ 表示。‘φ’ 为夜间守望，不等“分钟” (0φ00[NDASH]3φ59) | {lighttime-}: 见下文 | 光日与 Agnihotra: 今日日出[NDASH]日落 [明日日出]，⁺ = 当前 GPS | ² 新月与满月: 时刻（还有/之前多少天） | 月夜: 见下文 | ³ 月面视直径约为 2000 角秒[DF][DF]",
-    "txlegende0": "[b]–– 说明：[/b][~LF][~LF]一年中的“光之季节”把一年分成八个光线渐强、渐弱的阶段：1. {solcal_lph|0-}（4.2–5.5），2a. {solcal_lph|1-} (6.5–20.5)，2b. {solcal_lph|2-} (21.5–21.7)，2c. {solcal_lph|3-} (22.7–6.8)，3. {solcal_lph|4-} (7.8–6.11)，4a. {solcal_lph|5-} (7.11–21.11)，4b. {solcal_lph|6-} (22.11–19.1)，4c. {solcal_lph|7-} (20.1–3.2)。简写：Φx·y，其中 x = 光之时，y =[SP]% 进度。– 这些日期基于天文节点，因此可能与常规日历略有出入。[~LF][~LF]“月日”与我们的日期类似，只是以“夜”代替“日”：Μx·y (p/z)，其中 x = 该年的“月月”，y = 该月中的第几夜。由于各个朔望月长短不同，z 表示该月的夜数总和，p 表示满月之夜。夜晚在日出时结束。[DF][DF][DF]",
+    "txlocdata": "[DF]针对您个人位置的计算应与天文年鉴在 0.0005 角秒内一致³:[DF]",
+    "txobjdata": "– 太阳¹ –[~LF]时钟时间: {sun_clocktm}[~LF]时辰: {sun_temptm}[~LF]光照日: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]至日: {sun_soli}[~LF]分点: {sun_equi}[~LF][~LF]– 月亮² –[~LF]新月: {moon_new}[~LF]满月: {moon_full}[~LF]月夜: {moon_gordon}[~LF]照明度: {moon_illum}[~LF]大小: {moon_sizep} (85-100){weather_data}[~LF][~LF]– 亮度 –[~LF]金星: {venus_magp} (83-100)[~LF]火星: {mars_magp} (52-100)[~LF]木星: {jupiter_magp} (87-100)[~LF]土星: {saturn_magp} (77-100)[~LF]水星: {merkur_magp} (0-100)[~LF][~LF]¹ 时钟时间: GPS = 已同步 | 时辰: 本地不等时 (0.0[NDASH]11.9)，白昼为“ἡ”，夜间为“ν”。“φ” 为夜更，具有不等“分钟” (0φ00[NDASH]3φ59) | {lighttime-}: 见下 | 光照日与 Agnihotra: 今日升[NDASH]落 [明日升]，⁺ = 当前 GPS | ² 满月与新月: 时间（距今/之前天数） | 月夜: 见下 | ³ 月亮直径约 2000 角秒 | ⁴ 天气: 最低...最高...[夜间最低][DF][DF]",
+    "txlegende0": "[b]–– 说明:[/b][~LF][~LF]光之年季将一年分为八个光照增强与减弱的阶段（阶段进度百分比）：1. {solcal_lph|0-} (4.2.–5.5.), 2a. {solcal_lph|1-} (6.5.–20.5.), 2b. {solcal_lph|2-} (21.5.–21.7.), 2c. {solcal_lph|3-} (22.7.–6.8.), 3. {solcal_lph|4-} (7.8.–6.11.), 4a. {solcal_lph|5-} (7.11.–21.11.), 4b. {solcal_lph|6-} (22.11.–19.1.)，以及 4c. {solcal_lph|7-} (20.1.–3.2.)。简写：Φx·y。日期基于天文节点，可能与日历略有偏差。[~LF][~LF]月日期类似于我们的日期，但以夜代日：Μx·y (p/z)，其中 x = 年内的月“月”，y = 月内的夜。由于月月长度不同，z 表示该月的总夜数，p 表示满月之夜。夜晚在日出时结束。[DF][DF][DF]",
     "buttonsolcal": "光照日历",
     "txlegende": "[DF]☉ 太阳，● 月亮（含月相）[~LF][~LF]♀ 金星（珠光色），♂ 火星（微红），♃ 木星（带状纹），♄ 土星（有光环），☿ 水星（灰色）[~LF][~LF][s] 天狼星，[k] 老人星 (Canopus)，[f] 半人马座α星，[a] 大角星 (Arcturus)，[w] 织女星 (Vega)，[c] 五车二 (Capella)，[r] 参宿七 (Rigel)，[p] 南河三 (Procyon)，[b] 参宿四 (Betelgeuse)，[h] 波江座α星 (Achernar)[DF][DF][DF][DF]",
     "char_vowels": "",
@@ -159,7 +175,7 @@
     "txanleitungprg": "[DF]Gordon-太阳时钟[~LF]版本 [VERSIONNUM][~LF]Gordon Axmann[~LF]版权 2019-[VERSIONYEAR]",
     "txanleitung3": "[DF]请按原样使用该软件。这是免费的私人服务。我不是专业的应用程序开发人员，但多年来我还是为这个程序倾注了大量心血。[DF][DF]",
     "txchangelog": "有什么新功能？",
-    "txanleitung4": "[DF]数据不会被收集或发送。所有数据都保存在您的设备上。运行时甚至不需要互联网连接。例外情况：如果出现程序错误，当您连接互联网时，会发送一条匿名错误报告（详情请参阅数据保护政策）。这有助于确保 Sonnenuhr 的正常运行。[~LF][~LF]如果您发现了错误，我将很乐意为您更正。为此，我需要您提供清晰的错误报告（可能需要附上屏幕截图）以及错误发生的时间和地点的简要描述。在错误发生后，尽可能立即提供下方状态日志的屏幕截图也会很有帮助（电子邮件联系：[CONTACTSUPPORT]）。99% 的计算错误报告都是错误报告——遗憾的是，关于恒星计算的信息存在许多错误。[~LF][~LF]感谢：Brandon Rhodes（Skyfield）、Rolf、Greg Miller 以及所有测试人员。天体图片由以下机构提供：NASA / SOHO（太阳和日球观测站）、ESA / 哈勃太空望远镜和 NASA / JPL-Caltech（公共领域）。所有使用的第三方材料和许可信息，请参见文件“design/ COPYRIGHT.txt”。[~LF][~LF]我免费为您提供“日晷”软件。请尽情享受它带来的乐趣。如果您想表达对我的工作的感谢，请访问我的网站：[DF][DF]",
+    "txanleitung4": "[DF]不收集也不发送任何数据。一切都保留在您的设备上。运行甚至不需要互联网连接。唯一的例外是：如果发生程序错误，并且您有互联网连接，则会发送一条匿名错误报告（详见隐私政策）。这有助于确保 {txsunclock-} 的正常运行。[~LF][~LF]如果您发现了错误，我很乐意进行修正。为此，我需要一份清晰的错误报告（可附屏幕截图），以及对错误发生的位置和时间的简要说明。若能在错误发生后尽快提供下方状态日志的屏幕截图，也会非常有帮助（邮件联系：[CONTACTSUPPORT]）。- 关于所谓计算错误的提示在 99% 的情况下都是误报；遗憾的是，关于天文计算存在大量错误信息。[~LF][~LF]感谢：Brandon Rhodes（Skyfield）、Rolf、Greg Miller 以及所有测试人员。天体图像由以下机构提供：NASA / SOHO（太阳和日光层观测站）、ESA / 哈勃空间望远镜，以及 NASA / JPL-Caltech（公有领域）。天气数据（可选）：Open-Meteo.com（CC BY 4.0），MET Norway / Meteorologisk institutt（CC BY 4.0）。所有使用的第三方材料和许可证的列表可在文件 \"design/ COPYRIGHT.txt\" 中找到。[~LF][~LF]我免费向您提供 {txsunclock}。请尽情享受。如果您希望表达对我工作的认可，可在此找到我的网站：[DF][DF]",
     "txkaffee": "访问网站",
     "solcalmonthsxx": [
         "新二月%天",
