Änderungen von Rechner 1 (V2)

--- a/lang/en.json
+++ b/lang/en.json
@@ -103,6 +103,9 @@
         "metno": "MET Norge"
     },
     "txnow": "Now",
+    "txd0": "Today",
+    "txd1": "Tomorrow",
+    "txd2": "Day after",
     "txfullscr": "Wall clock mode",
     "txnachtmodus": "Dark mode",
     "txnachtmodusarr": {
