--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.8.2",
-        "updated": "2026-01-23 22:35:37"
+        "version": "1.8.3",
+        "updated": "2026-01-25 20:09:30"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -154,10 +154,10 @@
     "txnosupport": "[i]注意：您的语言尚未翻译。在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "uebanleitung": "说明",
     "txanleitung": "[DF]{LANGSUPPORT}1. 勾选 {txgpsauto}，以便在使用过程中自动更新您的位置（{quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} 用于更精确的定位与 GPS 时间同步）。{txgpsbutton} 会一次性确定您当前的位置并将其保存。[~LF][~LF]或者，您也可以在文本框中输入地名或地址（若您的设备支持），或输入坐标（例如 50.94, 6.96）。第 3 与第 4 项为可选：大致海拔 [m]、黄昏时的大致温度 [°C]。随后勾选 {txwelcomescr}。- 当基本数据发生变化时，{txsunclock-} 会执行一次日计算，耗时视设备而定，可能在 2[NDASH]30 秒之间。[~LF][~LF]2. {txuhrsinn} 用于设置时钟是顺时针（南）还是逆时针运行：不过如果您更改旋转方向，太阳圆圈中位于地平线下方的部分将会在您面前（详情见下一页）。{txshowclock} 会在表盘右上角显示一个数字时钟。",
-    "txmore": "[DF]3. {txfarben} 选择不同的表盘。{txnachtmodus} {txlangarr|auto-} 在日落时切换，-6° 至暮光结束，+6° 之前。 [~LF][~LF]4. {txagnihotra} 显示太阳指针的标记，以及下一次太阳零点通过的时间和倒计时。Agnihotra 前六分钟，显示放大并显示秒数（⁺ 表示 GPS 为当前）。{txfullscr} 防止屏幕关闭并切换到全屏。{txweathapi} 在时钟上叠加每日天气预报（如有网络）。若变为灰色，则数据已过期。- 若设置有时未被应用，请点击表盘右下角的刷新按钮。[~LF][~LF]您可以用两指放大表盘（或三击）。如需移动放大的图像，请缓慢操作。快速移动会切换到下一页。- 在下一页可找到表盘说明。[DF][DF][DF][b]–– 表盘图例:[/b][DF][DF]天气：当前温度，其上为每日天气：降水/天，日照/天，可选符号（仙人掌 = 干燥），可选星期（= 明天天气）",
+    "txmore": "[DF]3. {txfarben} 选择不同的表盘。{txnachtmodus} {txlangarr|auto-} 在日落时切换，-6° 表示暮光结束，+6° 表示之前。 [~LF][~LF]4. {txagnihotra} 显示太阳指针的标记、下一次太阳零点穿越的时间及倒计时。Agnihotra 前 6 分钟，显示会放大并显示秒数（⁺ 表示 GPS 当前有效）。{txfullscr} 防止屏幕关闭并切换到全屏。{txweathapi} 在表盘上叠加每日天气预报（需要网络）。若显示为灰色，表示数据已过期。– 若设置未生效，请点击表盘右下角的刷新按钮。[~LF][~LF]可用双指缩放表盘（或三击）。移动放大的图像时请缓慢操作，快速滑动会切换到下一页。– 下一页提供表盘说明。[DF][DF][DF][b]–– 表盘图例:[/b][DF][DF]天气：当前温度 + 上方为每日数据：降水量（χ = 雪）、日照小时、符号（仙人掌 = 干燥）及可选星期（= 明日天气），灰色 = 旧数据",
     "txdata": "[DF]数据",
-    "txlocdata": "[DF]针对您个人位置的计算应与天文年鉴在 0.0005 角秒内一致³:[DF]",
-    "txobjdata": "– 太阳¹ –[~LF]时钟时间: {sun_clocktm}[~LF]时辰: {sun_temptm}[~LF]光照日: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]至日: {sun_soli}[~LF]分点: {sun_equi}[~LF][~LF]– 月亮² –[~LF]新月: {moon_new}[~LF]满月: {moon_full}[~LF]月夜: {moon_gordon}[~LF]照明度: {moon_illum}[~LF]大小: {moon_sizep} (85-100){weather_data}[~LF][~LF]– 亮度 –[~LF]金星: {venus_magp} (83-100)[~LF]火星: {mars_magp} (52-100)[~LF]木星: {jupiter_magp} (87-100)[~LF]土星: {saturn_magp} (77-100)[~LF]水星: {merkur_magp} (0-100)[~LF][~LF]¹ 时钟时间: GPS = 已同步 | 时辰: 本地不等时 (0.0[NDASH]11.9)，白昼为“ἡ”，夜间为“ν”。“φ” 为夜更，具有不等“分钟” (0φ00[NDASH]3φ59) | {lighttime-}: 见下 | 光照日与 Agnihotra: 今日升[NDASH]落 [明日升]，⁺ = 当前 GPS | ² 满月与新月: 时间（距今/之前天数） | 月夜: 见下 | ³ 月亮直径约 2000 角秒 | ⁴ 天气: 最低...最高...[夜间最低][DF][DF]",
+    "txlocdata": "[DF]您所在地的计算结果与天文年鉴的误差约为 0.0005 角秒³:[DF]",
+    "txobjdata": "– 太阳¹ –[~LF]时间：{sun_clocktm}[~LF]时辰：{sun_temptm}[~LF]光日：{sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]至日：{sun_soli}[~LF]分点：{sun_equi}[~LF][~LF]– 月亮² –[~LF]新月：{moon_new}[~LF]满月：{moon_full}[~LF]月夜：{moon_gordon}[~LF]照明度：{moon_illum}[~LF]大小：{moon_sizep} (85-100){weather_data}[~LF][~LF]– 亮度 –[~LF]金星：{venus_magp} (83-100)[~LF]火星：{mars_magp} (52-100)[~LF]木星：{jupiter_magp} (87-100)[~LF]土星：{saturn_magp} (77-100)[~LF]水星：{merkur_magp} (0-100)[~LF][~LF]¹ 时间：GPS = 已同步 | 时辰：本地不等时（0.0[NDASH]11.9），白天为“ἡ”，夜晚为“ν”。“φ”表示夜更，不等“分钟”（0φ00[NDASH]3φ59） | {lighttime-}: 见下 | 光日与 Agnihotra：今日升[NDASH]落 [明日升]，⁺ = 当前 GPS | ² 满月与新月：时间（距今/之前天数） | 月夜：见下 | ³ 月亮视直径约为 2000 角秒 | ⁴ 天气：日内变化（太阳、进度、降雨、风），现在（= 接下来 3 小时）。– 日值：最小…最大…[夜间最低]（χ = 雪）[DF][DF]",
     "txlegende0": "[b]–– 说明:[/b][~LF][~LF]光之年季将一年分为八个光照增强与减弱的阶段（阶段进度百分比）：1. {solcal_lph|0-} (4.2.–5.5.), 2a. {solcal_lph|1-} (6.5.–20.5.), 2b. {solcal_lph|2-} (21.5.–21.7.), 2c. {solcal_lph|3-} (22.7.–6.8.), 3. {solcal_lph|4-} (7.8.–6.11.), 4a. {solcal_lph|5-} (7.11.–21.11.), 4b. {solcal_lph|6-} (22.11.–19.1.)，以及 4c. {solcal_lph|7-} (20.1.–3.2.)。简写：Φx·y。日期基于天文节点，可能与日历略有偏差。[~LF][~LF]月日期类似于我们的日期，但以夜代日：Μx·y (p/z)，其中 x = 年内的月“月”，y = 月内的夜。由于月月长度不同，z 表示该月的总夜数，p 表示满月之夜。夜晚在日出时结束。[DF][DF][DF]",
     "buttonsolcal": "光照日历",
     "txlegende": "[DF]☉ 太阳，● 月亮（含月相）[~LF][~LF]♀ 金星（珠光色），♂ 火星（微红），♃ 木星（带状纹），♄ 土星（有光环），☿ 水星（灰色）[~LF][~LF][s] 天狼星，[k] 老人星 (Canopus)，[f] 半人马座α星，[a] 大角星 (Arcturus)，[w] 织女星 (Vega)，[c] 五车二 (Capella)，[r] 参宿七 (Rigel)，[p] 南河三 (Procyon)，[b] 参宿四 (Betelgeuse)，[h] 波江座α星 (Achernar)[DF][DF][DF][DF]",
